# loco

./: .gitignore  CMakeLists.txt  ContactForceDistribution.cpp  ContactForceDistribution.hpp  Readme.md  RoughTerrain_Task.cpp  RoughTerrain_Task.hpp  VirtualModelController.cpp  VirtualModelController.hpp  toMove.cpp
base_control/: CMakeLists.txt
base_control/include/: BaseControlDynamicGait.hpp
base_control/src/: BaseControlBase.cpp  BaseControlDynamicGait.cpp  CoMOverSupportPolygonControl.cpp
base_control/test/: BaseControlTest.cpp  CMakeLists.txt
cmake/: findOOQP.cmake
doc/doxygen/: CMakeLists.txt  doxygen.config.in  mainpage.dox
examples/sl_example/: CMakeLists.txt
examples/sl_example/include/: LocoExample_Task.hpp  SCGraphicalDebuggerDynamicGait.hpp
examples/sl_example/parameters/: StaticLateralWalkSim.xml  WalkingTrotSim.xml
examples/sl_example/src/: GaitPatternAPSPreview.cpp  LocoExample_Task.cpp  SCGraphicalDebuggerDynamicGait.cpp
foot_placement_strategy/: CMakeLists.txt
foot_placement_strategy/include/: FootPlacementStrategyBase.hpp  FootPlacementStrategyInvertedPendulum.hpp
foot_placement_strategy/src/: FootPlacementStrategyBase.cpp  FootPlacementStrategyInvertedPendulum.cpp
foot_placement_strategy/test/: CMakeLists.txt  FootPlacementStrategyTest.cpp
gait_pattern/: CMakeLists.txt
gait_pattern/include/: APS.hpp  GaitAPS.hpp  GaitPatternAPS.hpp  GaitPatternBase.hpp
gait_pattern/include/loco/: GaitAPS.hpp  GaitPatternAPS.hpp
gait_pattern/src/: APS.cpp  GaitAPS.cpp  GaitPatternAPS.cpp
gait_pattern/test/: CMakeLists.txt  GaitPatternAPSTest.cpp
limb_coordinator/: CMakeLists.txt
limb_coordinator/include/: LimbCoordinatorBase.hpp  LimbCoordinatorDynamicGait.hpp
limb_coordinator/src/: LimbCoordinatorBase.cpp  LimbCoordinatorDynamicGait.cpp
limb_coordinator/test/: CMakeLists.txt  LimbCoordinatorTest.cpp
locomotion_controller/: CMakeLists.txt
locomotion_controller/include/: LocomotionControllerBase.hpp  LocomotionControllerDynamicGait.hpp
locomotion_controller/include/loco/: LocomotionControllerDynamicGait.hpp
locomotion_controller/src/: LocomotionControllerBase.cpp  LocomotionControllerDynamicGait.cpp
locomotion_controller/test/: CMakeLists.txt  LocomotionControllerTest.cpp
src/base_control/: BaseControlBase.cpp  BaseControlDynamicGait.cpp  CMakeLists.txt  CoMOverSupportPolygonControl.cpp
src/com_over_support_polygon/: CMakeLists.txt  CoMOverSupportPolygonControl.cpp  CoMOverSupportPolygonControlBase.cpp  CoMOverSupportPolygonControlDynamicGait.cpp  CoMOverSupportPolygonControlLeverConfiguration.cpp  CoMOverSupportPolygonControlStaticGait.cpp
src/common/: CMakeLists.txt  GeneralizedStateBase.cpp  GeneralizedStateStarlETH.cpp  LegBase.cpp  LegGroup.cpp  LegLink.cpp  LegLinkGroup.cpp  LegPropertiesBase.cpp  LegPropertiesStarlETH.cpp  LegStarlETH.cpp  LegStateBase.cpp  LegStateLiftOff.cpp  LegStateTouchDown.cpp  ParameterSet.cpp  StateBase.cpp  StateDynamicGait.cpp  TerrainModelBase.cpp  TerrainModelFreePlane.cpp  TerrainModelHorizontalPlane.cpp  TerrainModelPerceptedPlane.cpp  TerrainModelSimulation.cpp  TorsoBase.cpp  TorsoPropertiesBase.cpp  TorsoPropertiesStarlETH.cpp  TorsoStarlETH.cpp  TorsoStateBase.cpp  TorsoStateDesired.cpp  TorsoStateMeasured.cpp
src/contact_detection/: CMakeLists.txt  ContactDetectorBase.cpp  ContactDetectorConstantDuringStance.cpp  ContactDetectorFeedThrough.cpp
src/contact_force_distribution/: CMakeLists.txt  ContactForceDistribution.cpp  ContactForceDistributionBase.cpp
src/dynamic_systems_utils/: CMakeLists.txt  FirstOrderFilter.cpp  FirstOrderSystemBase.cpp
src/event_detection/: CMakeLists.txt  EventDetector.cpp  EventDetectorBase.cpp
src/foot_placement_strategy/: CMakeLists.txt  FootPlacementStrategyBase.cpp  FootPlacementStrategyFreePlane.cpp  FootPlacementStrategyInvertedPendulum.cpp  FootPlacementStrategyJump.cpp  FootPlacementStrategyStaticGait.cpp
src/gait_pattern/: APS.cpp  CMakeLists.txt  GaitAPS.cpp  GaitPatternAPS.cpp  GaitPatternBase.cpp  (+1 more)
src/limb_coordinator/: CMakeLists.txt  LimbCoordinatorBase.cpp  LimbCoordinatorDynamicGait.cpp  LimbCoordinatorJump.cpp
src/locomotion_controller/: CMakeLists.txt  LocomotionControllerBase.cpp  LocomotionControllerDynamicGait.cpp  LocomotionControllerDynamicGaitDefault.cpp  LocomotionControllerJump.cpp
src/mission_control/: CMakeLists.txt  MissionControlBase.cpp  MissionControlDemo.cpp  MissionControlDynamicGait.cpp  MissionControlJoystick.cpp  MissionControlSpeedFilter.cpp  MissionControlSpeedTrajectory.cpp  MissionControlStaticGait.cpp
src/terrain_perception/: CMakeLists.txt  TerrainPerceptionBase.cpp  TerrainPerceptionFreePlane.cpp  TerrainPerceptionHorizontalPlane.cpp  TerrainPerceptionPredictedPlane.cpp
src/torso_control/: CMakeLists.txt  CoMOverSupportPolygonControl.cpp  TorsoControlBase.cpp  TorsoControlDynamicGait.cpp  TorsoControlDynamicGaitFreePlane.cpp  TorsoControlDynamicGaitPerceptedTerrain.cpp  TorsoControlGaitContainer.cpp  TorsoControlJump.cpp  TorsoControlStaticGait.cpp
src/virtual_model_control/: CMakeLists.txt  VirtualModelController.cpp
src/visualizer/: CMakeLists.txt  VisualizerBase.cpp
src/visualizer/sc/: CMakeLists.txt  GaitPatternAPSPreview.cpp  GaitPatternFlightPhasesPreview.cpp  VisualizerSC.cpp
static_contact_force_distribution/: CMakeLists.txt
static_contact_force_distribution/include/: ContactForceDistribution.hpp
static_contact_force_distribution/src/: ContactForceDistribution.cpp
temp_helpers/: CMakeLists.txt
terrains/: generateTerrainSlope.m  generateTerrainWedgeTunnel.m
test/: CMakeLists.txt  test_main.cpp
test/base_control/: CMakeLists.txt
test/foot_placement_strategy/: CMakeLists.txt  FootPlacementStrategyTest.cpp
test/gait_pattern/: CMakeLists.txt  GaitPatternAPSTest.cpp
test/limb_coordinator/: CMakeLists.txt  LimbCoordinatorTest.cpp
test/locomotion_controller/: CMakeLists.txt  LocomotionControllerTest.cpp
test/torso_control/: CMakeLists.txt  TorsoControlTest.cpp
virtual_model_control/: CMakeLists.txt
virtual_model_control/include/: VirtualModelController.hpp
(+148 files in other folders)
